2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iomxx4.h: use avr-libc common vector names.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix for bug #12333: Standard requires libstdc to define vprintf
	and vscanf
	* include/stdio.h: add prototypes for vscanf() and vprintf().
	* libc/stdio/vscanf.c: new file.
	* libc/stdio/vprintf.c: new file.
	* libc/stdio/Files.am: add vscanf.c and vprintf.c.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Markus F.X.J. Oberhumer:
	* include/stdio.h: provide a dummy fflush(); patch #3781: add
        dummy fflush() to <stdio.h>

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version.

2005-09-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Major API changes of the standard IO facilities.

	Part of these changes (passing user data to get and put)
	have been contributed by Ted Roth as patch #3750.

	* include/stdio.h: implement the new prototype for fdevopen()
	that allows passing user data to the backend put and get
	functions; retain a backwards-compatible prototype iff
	__STDIO_FDEVOPEN_COMPAT_12 is defined before including stdio.h;
	move definition of struct __file from stdio_internal.h here, so
	user code will be able to directly declare objects of type FILE;
	include the udata field in struct __file; add macros
	fdev_set_udata() and fdev_get_udata() to access the user data
	field; implement a macro-based, malloc()-free alternative API
	to fdevopen() consisting of the macros fdev_setup_stream() and
	FDEV_SETUP_STREAM() together with _FDEV_SETUP_READ,
	_FDEV_SETUP_WRITE, and _FDEV_SETUP_RW that can be passed to
	declare the open intent; add _FDEV_ERR and _FDEV_EOF to be
	returned by the internal get function; add inline macros
	shadowing the functions clearerr(), feof(), and ferror() (now
	that struct __file is user-visible); add documentation for all
	the API changes in the introduction; sub-structure the